# AIoT_secure_with_NPU

./: README.md
data/: pre_encfile
key/: make_key.c
server/Encrypto/: CMakeLists.txt
server/Encrypto/src/: encrypt.c  encrypt.h  main.c  main2.c  main3.c
utils/: CMakeLists.txt  enc_struct.c  enc_struct.h  gal251_field.c  gal251_field.h  key_utils.c  key_utils.h  matrix.c  matrix.h  model_utils.c  model_utils.h  onnx.pb-c.c
zcu104/Decrypto/: CMakeLists.txt
zcu104/Decrypto/gemm_test/: gemm_int32.c  npu_gemm.c  npu_gemm.h  npu_ioctl.h
zcu104/Decrypto/src/: decrypt.c  decrypt.h  main.c  main2.c  main3.c  main4.c
zcu104/key/: make_key.py
zcu104/secure_stage/Encrypto/: encrypto.py
zcu104/secure_stage/Encrypto/src/: encrypt.h  main.c  model_utils.h  onnx.pb-c.h
